--- a/app/views/static_pages/_quest.js.erb
+++ b/app/views/static_pages/_quest.js.erb
@@ -23,6 +23,7 @@ if (no_errors) {
             break;
         case 'panel_view':
             moreInfo();
+            $('.g-drop').slideUp(0);
             break;
     }
 }
