--- a/app/assets/stylesheets/covers.scss
+++ b/app/assets/stylesheets/covers.scss
@@ -75,7 +75,8 @@
     transition: opacity 0.2s;
 
     &.owned {
-        box-shadow: 0px 1px 0px 0px #9a9a9a;
+        // box-shadow: 0px 1px 0px 0px #9a9a9a;
+        box-shadow: 0px 2px 0px 0px #b9b9b9;
         padding-bottom: 2px;
     }
 }
