--- a/app/assets/stylesheets/panels.scss
+++ b/app/assets/stylesheets/panels.scss
@@ -15,19 +15,6 @@
     width: 100px;
 }
 
-.g-right-add {
-    padding: 10px 12px;
-    width: 20px;
-
-    a {
-        color: #999;
-
-        &:hover {
-            color: #666;
-        }
-    }
-}
-
 .g-platforms {
     font-size: 12px;
     color: #666;
@@ -490,6 +477,7 @@ hr.md {
 }
 
 .g-hide {
+    display: none;
     position: absolute;
     bottom: 8px;
     right: 12px;
@@ -497,6 +485,7 @@ hr.md {
 
 .thumb-c {
     position: relative;
+    min-width: 70px;
     width: 70px;
     height: 70px;
     background: #bdbdbd;
@@ -548,6 +537,7 @@ hr.md {
 
 .g-info.s-mod {
     padding: 10px 0px 10px 10px;
+    width: 100%;
 }
 
 .hold-title {
@@ -605,9 +595,31 @@ hr.md {
     border-radius: 0px;
 }
 
+.g-right-add {
+    padding: 10px 12px;
+    min-width: 20px;
+
+    a {
+        color: #999;
+
+        &:hover {
+            color: #666;
+        }
+    }
+}
+
+.not-drop {
+    display: flex;
+}
+
 .g-drop {
     display: none;
     padding-bottom: 20px;
+    overflow: auto;
+}
+
+.g-drop.s-mod {
+    display: block;
 }
 
 .g-click {
