--- a/app/assets/stylesheets/panels.scss
+++ b/app/assets/stylesheets/panels.scss
@@ -18,8 +18,8 @@
 .g-platforms {
     font-size: 12px;
     color: #666;
-    margin: 9px 0 0;
-    line-height: 15px;
+    margin: 8px 0 0;
+    // line-height: 15px;
 }
 
 .container {
