--- a/app/views/games/new.js.erb
+++ b/app/views/games/new.js.erb
@@ -1,24 +1,19 @@
 var form_partial = "<%= j(render partial: 'search/add_form', locals: { data: @data, owned: @owned, x_id: @x_id }) %>";
+var view = $('#view-container').attr('view');
 
-
-//do things differently based on view
-
-if ($('.add-form').length > 0) {
-  $("#add-form-<%= @x_id %>").html(form_partial);
-  selectLastColl('add','<%= @x_id %>');
-} else {
-  $("#t-ops .modal-content").html(form_partial);
-  selectLastColl('list','<%= @x_id %>');
+switch (view) {
+    case 'covers':
+        paintItBlack('<%= @x_id %>');
+        $("#add-form-<%= @x_id %>").html(form_partial);
+        selectLastColl('add', '<%= @x_id %>');
+        break;
+    case 'panels':
+        $("#add-form-<%= @x_id %>").html(form_partial);
+        selectLastColl('add', '<%= @x_id %>');
+        break;
+    default:
+        $("#t-ops .modal-content").html(form_partial);
+        selectLastColl('list', '<%= @x_id %>');
 }
-
-//covers_view
-paintItBlack('<%= @x_id %>')
-
-//list_view
-
-//panels_view
-
-
-// all
 
 activateForm('add', '<%= @x_id %>');
