--- a/app/views/collections/remove_game_search.js.erb
+++ b/app/views/collections/remove_game_search.js.erb
@@ -12,27 +12,40 @@ UIkit.notification({
 if (success) {
     var game_id = '<%= @game.igdb_id %>';
     var x_id = '<%= @x_id %>';
+    var new_already = "<%= j(render partial: 'search/already_in', locals: { game_name: @game.name, igdb_id: @game.igdb_id, x_id: @x_id }) %>";
 
-    var already = "#add-form-" + x_id + " .already-in";
-    var proxy = "<%= j(render partial: 'search/already_in', locals: { game_name: @game.name, igdb_id: @game.igdb_id, x_id: @x_id }) %>";
-    $(already).html(proxy);
+    var view = $('#view-container').attr('view');
 
-    // Reseting error status upon succesful remove
-    var element = '#add-form-' + x_id + ' .add-form-errors';
-    $(element).html('');
+    var already, errors_place;
 
-    // Remove underline from removed game and change add-form link
+    switch (view) {
+        case 'covers':
+            already = "#add-form-" + x_id + " .already-in";
+            errors_place = '#add-form-' + x_id + ' .add-form-errors';
+            break;
+        case 'panels':
+            already = "#add-form-" + x_id + " .already-in";
+            errors_place = '#add-form-' + x_id + ' .add-form-errors';
+            break;
+        default:
+            already = "#t-ops .already-in";
+            errors_place = '#t-ops .add-form-errors';
+    }
+
+    $(already).html(new_already);
+    $(errors_place).html('');
+
     if (remove_underline) {
 
-        var name_el = $('[id^=gs-' + game_id + ']').find('.game-name span');
-        name_el.removeClass('owned');
+        if (view === 'covers') {
+            var name_el = $('[id^=gs-' + game_id + ']').find('.game-name span');
+            name_el.removeClass('owned');
+        }
 
-        // Change add-form link
         $('[id^=add-' + game_id + ']').each(function() {
             var href = $(this).attr('href');
             $(this).attr('href', href.replace('true', 'false'));
+            $(this).attr('uk-icon', 'plus');
         });
-
     }
 }
-
