--- a/app/views/search/_panel_view.html.erb
+++ b/app/views/search/_panel_view.html.erb
@@ -1,4 +1,4 @@
-<div class="uk-grid-collapse panels-grid" uk-grid>
+<div id="view-container" class="uk-grid-collapse" view="panels" uk-grid>
 <% @results.each do |game| %>
     <% igdb_id = game[:igdb_id] %>
     <% x_id = game[:uniq] ? igdb_id.to_s + '-' + game[:uniq] : igdb_id %>
