--- a/app/views/collections/_my_games.html.erb
+++ b/app/views/collections/_my_games.html.erb
@@ -2,7 +2,7 @@
     <%= search_form_for(@q, url: collection, remote: true) do |f| %>
     <div class="uk-inline">
         <span class="s-icon" uk-icon="icon: search"></span>
-        <%= f.search_field(:name_dev_cont, placeholder: "Title or Developer", class: 'uk-input search-input', autofocus: "true", autocomplete: "off") %>
+        <%= f.search_field(:name_dev_cont, placeholder: "Title or Developer", class: 'uk-input search-input', autofocus: "true", autocomplete: "off", disabled: @games.empty?) %>
     </div>
     <%= hidden_field_tag 'view', view %>
     <% if collection.needs_platform %>
