--- a/app/views/collections/_my_games.html.erb
+++ b/app/views/collections/_my_games.html.erb
@@ -1,11 +1,12 @@
-<div class="uk-width-1-1 my-search">
+<% needs_platform = collection.needs_platform %>
+<%= content_tag :div, class: "uk-width-1-1 my-search #{ !needs_platform ? 'left-no-p' : 'left-p' }" do %>
     <%= search_form_for(@q, url: collection, remote: true) do |f| %>
-    <div class="uk-inline">
+    <%= content_tag :div, class: 'uk-inline' do %>
         <span class="s-icon" uk-icon="icon: search"></span>
         <%= f.search_field(:name_dev_cont, placeholder: "Title or Developer", class: 'uk-input search-input', autofocus: "true", autocomplete: "off", disabled: @games.empty?) %>
-    </div>
+    <% end %>
     <%= hidden_field_tag 'view', view %>
-    <% if collection.needs_platform %>
+    <% if needs_platform %>
     <div class="srch-div first"></div>
     <div uk-form-custom="target: true">
         <%= f.select(:plat_eq, user_platforms, {include_blank: 'All Platforms'}, {class: 'select-input'} ) %>
@@ -20,7 +21,7 @@
     <% end %>
     <%= content_tag(:button,'', id: 'search-reset', 'uk-close': '')%>
     <% end %>
-</div>
+<% end %>
 <div id='r-q'></div>
 <div id='r-s'></div>
 <div class="my-games">
