--- a/app/views/static_pages/_results.html.erb
+++ b/app/views/static_pages/_results.html.erb
@@ -30,7 +30,5 @@
     <% end %>
   <% end %>
 <% else %>
-  <div class="no-results">
-    <p>No results</p>
-  </div>
+<%= render partial: 'search/no_results' %>
 <% end %>
