Add searching animation. Still needs work.

--- a/app/views/static_pages/_search_bar.html.erb
+++ b/app/views/static_pages/_search_bar.html.erb
@@ -58,7 +58,7 @@
       </div>
     </div>
     <div class="drop-buttons">
-      <%= f.button('Search', class: "uk-button uk-button-default search-button", data: { disable_with: "<div uk-spinner=\"ratio: 0.5\"></div>" } )%>
+      <%= f.button('Search', id: 'search', class: 'uk-button uk-button-default search-button', data: { disable_with: "<div uk-spinner=\"ratio: 0.5\"></div>" } )%>
       <%= f.submit('Reset', class: "uk-button uk-button-default reset-button", type: "reset" )%>
     </div>
   </div>
