--- a/app/views/static_pages/_search_page.html.erb
+++ b/app/views/static_pages/_search_page.html.erb
@@ -1,2 +1,12 @@
 <%= render 'search_bar' %>
 <div id="search-results"></div>
+
+
+<div id='search-wait'>
+
+<div class="rotor">
+  <span class="glass" uk-icon="icon: search; ratio: 5"></span>
+</div>
+<p>Searching...</p>
+
+</div>
