--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,11 +58,65 @@ $disabled: #b4b4b4;
 @import "collections";
 @import "game_offc";
 
+// SEARCH WAIT
+
+#search-wait {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 120px;
+    height: 178px;
+    margin-left: -60px;
+    margin-top: -89px;
+
+    p {
+    font-size: 22px;
+    margin-left: 5px;
+    color: #b7b7b7;
+    margin-top: 5px;
+    text-align: center;
+    letter-spacing: 0.3px;
+    }
+}
+
+.rotor {
+    width: 120px;
+    height: 120px;
+    margin: 0 auto;
+    border-radius: 50%;
+    // border: 3px solid #999;
+    animation: 1.5s infinite search linear;
+    animation-direction: reverse;
+}
+
+.glass {
+    color: #bdbdbd;
+    animation: 1.5s infinite search linear;
+
+    svg circle {
+        stroke-width: 0.6;
+    }
+
+    svg path {
+        stroke-width: 0.6;
+    }
+}
+
+@keyframes search {
+    from {
+        transform: rotate(0);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
 // NO GAMES
 .not-active {
-  pointer-events: none;
-  cursor: default;
-  text-decoration: none;
+    pointer-events: none;
+    cursor: default;
+    text-decoration: none;
 }
 
 .uk-input:disabled {
@@ -97,6 +151,7 @@ $disabled: #b4b4b4;
 // NO RESULTS
 .no-results {
     @extend .no-games;
+
     width: 366px;
     margin-left: -183px;
 }
@@ -439,7 +494,6 @@ li.active:hover .opts {
 
 // Errors (Search IGDB)- - - - - - - - - - - - - - - - - - - - - - - - - - - //
 .warning-icon {
-
     pointer-events: all !important;
     color: #999999;
 }
@@ -482,6 +536,7 @@ li.active:hover .opts {
 
 .api-status {
     @extend .errors;
+
     width: 227px;
     font-size: 12px;
     color: #fff;
