--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,39 +59,69 @@ $disabled: #b4b4b4;
 @import "game_offc";
 
 // SEARCH WAIT
+div#search-results.mask1:after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: #ddddddad;
+    z-index: 2;
+}
+
+div#search-results.mask2:after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: #dddddde6;
+    z-index: 2;
+}
 
 #search-wait {
     position: absolute;
-    top: 50%;
+    top: 50vh;
     left: 50%;
     width: 120px;
     height: 178px;
     margin-left: -60px;
     margin-top: -89px;
+    z-index: -1;
 
     p {
     font-size: 22px;
-    margin-left: 5px;
-    color: #b7b7b7;
+    font-weight: 300;
+    margin-left: 8px;
+    color: #999;
     margin-top: 5px;
-    text-align: center;
     letter-spacing: 0.3px;
+    }
+
+    p:after {
+    content: "";
+    animation: 3s infinite dots linear;
     }
 }
 
+#search-wait.front {
+    z-index: 3;
+}
+
 .rotor {
-    width: 120px;
-    height: 120px;
+    width: 100px;
+    height: 100px;
     margin: 0 auto;
     border-radius: 50%;
-    // border: 3px solid #999;
-    animation: 1.5s infinite search linear;
+    animation: 2s infinite search linear;
     animation-direction: reverse;
 }
 
 .glass {
-    color: #bdbdbd;
-    animation: 1.5s infinite search linear;
+    color: $light_grey;
+    animation: 2s infinite search linear;
 
     svg circle {
         stroke-width: 0.6;
@@ -109,6 +139,24 @@ $disabled: #b4b4b4;
 
     to {
         transform: rotate(360deg);
+    }
+}
+
+@keyframes dots {
+    0% {
+        content: "";
+    }
+
+    25% {
+        content: ".";
+    }
+
+    50% {
+        content: "..";
+    }
+
+    75% {
+        content: "...";
     }
 }
 
