--- a/app/views/static_pages/_quest.js.erb
+++ b/app/views/static_pages/_quest.js.erb
@@ -1,8 +1,6 @@
 var no_errors = <%= !@inquiry.errors.any? %>;
 var view = '<%= view %>';
 
-console.log('Searching...')
-
 $("#search-errors").replaceWith("<%= j(render partial: 'search_errors', locals: { errors: @inquiry.errors }) %>");
 $('#search-igdb-bar').on('input', function() {
     $("#search-errors").replaceWith("<%= j(render partial: 'search_errors', locals: { errors: [] }) %>");
@@ -14,7 +12,7 @@ if (no_errors) {
   $("#search-results").html("<%= j(render partial:'results', locals: { view: view }) %>");
   $("#search-results").append("<%= j(render partial: 'layouts/s_toolbar', locals: { last_form: @inquiry.last_form.values }) %>");
 
-  clearSearchWait();
+
   changeTheme();
   changeSearchView();
 
@@ -31,3 +29,8 @@ if (no_errors) {
             break;
     }
 }
+
+$(function() {
+    clearSearchWait();
+});
+
