--- a/app/views/my_games/_covers.html.erb
+++ b/app/views/my_games/_covers.html.erb
@@ -92,5 +92,5 @@
   </div>
 </div>
 <% else %>
-<%= render partial: 'my_games/no_games' %>
+  <%= render partial: 'my_games/no_games', locals: { my_search: @in_search } %>
 <% end %>
