--- a/app/views/static_pages/search_page.js.erb
+++ b/app/views/static_pages/search_page.js.erb
@@ -5,5 +5,5 @@ $('input#search-igdb-bar').focus();
 changeSearchBar();
 
 searchWait();
-
+clearNoResults();
 Cookies.set('last', 'search', { expires: 30 });
