--- a/app/views/static_pages/_search_page.html.erb
+++ b/app/views/static_pages/_search_page.html.erb
@@ -1,4 +1,3 @@
 <%= render 'search_bar' %>
-<div id="search-results"></div>
-<div id='search-wait'>
-</div>
+<%= content_tag :div, nil, id: 'search-results' %>
+<%= content_tag :div, nil, id: 'search-wait' %>
