--- a/app/views/my_games/_covers.html.erb
+++ b/app/views/my_games/_covers.html.erb
@@ -77,9 +77,13 @@
   <%= content_tag(:p, game.created_at.to_date ,class: 'g-added italic') %>
   <% end %>
   <% end %>
-  <%= content_tag :div, 'Loading...', id: "copy-form-#{ id }", class: 'copy-form white-form', 'uk-dropdown': "toggle: #g-copy-#{ id }; mode: click; delay-hide: 100; boundary: #gs-#{ id }; boundary-align: true; pos: right-top"  %>
+  <%= content_tag :div, id: "copy-form-#{ id }", class: 'copy-form white-form', 'uk-dropdown': "toggle: #g-copy-#{ id }; mode: click; delay-hide: 100; boundary: #gs-#{ id }; boundary-align: true; pos: right-top" do %>
+    <span class="loading">Loading</span>
+  <% end %>
   <% if needs_platform %>
-  <%= content_tag :div, 'Loading...', id: "edit-form-#{ id }", class: 'edit-form white-form', 'uk-dropdown': "toggle: #g-edit-#{ id }; mode: click; delay-hide: 100; boundary: #gs-#{ id }; boundary-align: true; pos: right-top"  %>
+  <%= content_tag :div, id: "edit-form-#{ id }", class: 'edit-form white-form', 'uk-dropdown': "toggle: #g-edit-#{ id }; mode: click; delay-hide: 100; boundary: #gs-#{ id }; boundary-align: true; pos: right-top"  do %>
+    <span class="loading">Loading</span>
+  <% end %>
   <% end %>
   <% end %>
   <div class="uk-width-1-1 page-links cover-mod cover-mod-bottom">
@@ -88,7 +92,7 @@
 </div>
 <div id="i-lone" uk-offcanvas="mode: none; bg-close: true">
   <div class="uk-offcanvas-bar">
-    Loading...
+    <span class="loading">Loading</span>
   </div>
 </div>
 <% else %>
