--- a/app/views/search/_list_view.html.erb
+++ b/app/views/search/_list_view.html.erb
@@ -51,7 +51,7 @@
     <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical" uk-overflow-auto>
         <button class="uk-modal-close-default" type="button" uk-close></button>
         <div class="modal-content">
-            Loading...
+            <span class="loading">Loading</span>
         </div>
     </div>
 </div>
@@ -59,7 +59,7 @@
 <div id="t-ops" uk-modal ="container: #search-results">
     <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
         <div class="modal-content">
-            Loading...
+            <span class="loading">Loading</span>
         </div>
     </div>
 </div>
