--- a/app/views/search/_panel_view.html.erb
+++ b/app/views/search/_panel_view.html.erb
@@ -64,6 +64,8 @@
         <% end %>
         <%= content_tag :button, '', id: "g-hide-#{ x_id }", class: 'g-hide uk-icon-link', 'uk-icon': 'chevron-up' %>
     <% end %>
-    <%= content_tag(:div, 'Loading...', id: "add-form-#{ x_id }", class: 'add-form', 'uk-dropdown': "toggle: #add-#{ x_id }; mode: click; boundary: #g-#{ x_id }; boundary-align: true;  delay-hide: 100;  pos: right-top") %>
+    <%= content_tag(:div, id: "add-form-#{ x_id }", class: 'add-form', 'uk-dropdown': "toggle: #add-#{ x_id }; mode: click; boundary: #g-#{ x_id }; boundary-align: true;  delay-hide: 100;  pos: right-top") do %>
+        <span class="loading">Loading</span>
+    <% end %>
 <% end %>
 </div>
